# pico_ocr

./: ocr.py  pico.py  test.py
c_files/: CMakeLists.txt  blink_led.c
